@@ -1,5 +1,6 @@
 2008-11-xx:
     * version 0.6.8
+    * Show favorite boards in context menu
 
 2008-11-01:
     * version 0.6.7
